--- a/src/main/java/chavez/cesar/agendav2/Captura.form
+++ b/src/main/java/chavez/cesar/agendav2/Captura.form
@@ -388,6 +388,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Salir"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JB_SalirActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
