--- a/src/main/java/chavez/cesar/agendav2/Captura.form
+++ b/src/main/java/chavez/cesar/agendav2/Captura.form
@@ -258,6 +258,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="JT_Email">
           <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="JT_EmailFocusLost"/>
             <EventHandler event="inputMethodTextChanged" listener="java.awt.event.InputMethodListener" parameters="java.awt.event.InputMethodEvent" handler="JT_EmailInputMethodTextChanged"/>
           </Events>
         </Component>
