--- a/src/main/java/chavez/cesar/agendav2/Captura.form
+++ b/src/main/java/chavez/cesar/agendav2/Captura.form
@@ -37,7 +37,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="JP_Panel3" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                       <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -592,26 +592,20 @@
             <Component class="javax.swing.JTable" name="jTable1">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="10" rowCount="0">
+                  <Table columnCount="9" rowCount="0">
                     <Column editable="true" title="Id" type="java.lang.Object"/>
-                    <Column editable="true" title="nombre" type="java.lang.Object"/>
-                    <Column editable="true" title="apellido" type="java.lang.Object"/>
-                    <Column editable="true" title="domicilio" type="java.lang.Object"/>
-                    <Column editable="true" title="telefono" type="java.lang.Object"/>
-                    <Column editable="true" title="email" type="java.lang.Object"/>
-                    <Column editable="true" title="fechanacimiento" type="java.lang.Object"/>
-                    <Column editable="true" title="sexo" type="java.lang.Object"/>
-                    <Column editable="true" title="edad" type="java.lang.Object"/>
-                    <Column editable="true" title="foto" type="java.lang.Object"/>
+                    <Column editable="true" title="Nombre" type="java.lang.Object"/>
+                    <Column editable="true" title="Apellido" type="java.lang.Object"/>
+                    <Column editable="true" title="Domicilio" type="java.lang.Object"/>
+                    <Column editable="true" title="Telefono" type="java.lang.Object"/>
+                    <Column editable="false" title="Email" type="java.lang.Object"/>
+                    <Column editable="true" title="FechaNacimiento" type="java.lang.Object"/>
+                    <Column editable="true" title="Sexo" type="java.lang.Object"/>
+                    <Column editable="false" title="Edad" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title/>
-                      <Editor/>
-                      <Renderer/>
-                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
