Renata va a ir a tequila

--- a/src/main/java/chavez/cesar/agendav2/Captura.form
+++ b/src/main/java/chavez/cesar/agendav2/Captura.form
@@ -35,12 +35,15 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace min="361" pref="361" max="-2" attributes="0"/>
-                      <Component id="jP_Foto" min="-2" max="-2" attributes="0"/>
+                      <Component id="jP_Foto" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane1" min="-2" pref="550" max="-2" attributes="0"/>
-                  <Component id="jLabel7" min="-2" pref="578" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="29" pref="31" max="32767" attributes="0"/>
+          </Group>
+          <Component id="jLabel7" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="jScrollPane1" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -352,7 +355,7 @@
                           <Component id="JB_Foto" min="-2" pref="78" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="33" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
